Changes towards version 0.5:
- Fixed lockup when skipping past VUX beast analysis data in Starbase
  (bug #790; should take care of all spliced comm edge cases) - Alex
- Added 3DO-style throbbing slave shield (--shield; bug #32);
  special thanks to Nic for inspiration and some code - Alex
- Rotating 3D planet changes: nicer looking slave shield; planet now
  finally looks like a rotating sphere (and not cylinder); added some
  lighting variance to give it a 3D feel (not a smooth ball) - Alex
- Refactored colormaps storage, management and transforms; paletted
  images rendering should be much faster now - Alex
- Corrected intro slide 5 (crosshair removed); bug #794, from AusME
- Split off alien comm colormaps from global scclrtab into
  corresponding race dirs (avoids potential mod collisions) - Alex
- Refactored font engine: fonts are loaded and treated as
  alpha-channel-only images (allowing for antialiased fonts now);
  solid color and gradient/alternate effects processing is unified - Alex
- Fixed problems with pausing the game during ending sequences
  (game-clock bug; undrawing incorrectly due to cliprect) - Alex
- Removed hotspot abuse from lander report drawing to fix bad
  positioning desync brought on by new hotspot handling - Alex
- Trilinear melee scaler overhaul (melee smooth mode should look
  nicer now; melee can now fully use alpha gfx) - Alex
- Miscellaneous Sa-Matra gfx fixes (Generator collision masks and
  explosion frame 0 were off; Shield position was off in med and sml;
  Main sml gfx was 2 pixels too narrow) - Alex
- Replaced the binary resource indexes by textual ones
  (also resolves bug #687) - SvdB
- Some subtitle timing fixes (bug #s 771, 780) - Alex
- Entering Planetary Orbit wait screen is back (from DOS) - Alex
- Gfx engine changes: now always 32bpp internally (facilitates
  alpha channel usage); accelerated platform-specific scaler code;
  only using alpha channel where needed - Alex