@@ -1,4 +1,5 @@
 Changes towards version 0.5:
+- Added --shield and --scaler hq to setup menu - Michael
 - Fixed lockup when skipping past VUX beast analysis data in Starbase
   (bug #790; should take care of all spliced comm edge cases) - Alex
 - Added 3DO-style throbbing slave shield (--shield; bug #32);
